# VMS

./: .env.copy  .gitignore  README.MD  pyproject.toml  requirements.txt
core/: settings.py  urls.py
