[tool.poetry]
name = "vendormanagementsystem"
version = "0.1.0"
description = ""
authors = ["Leo-Mahendra <mahender.kurikyala11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
python-dotenv = "^1.0.0"
django-cors-headers = "^4.3.1"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
